--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 sbi-rt = "0.0.3"
 log = "0.4"
+bitflags = "1.3"
+buddy_system_allocator = "0.11"
 
 [profile.release]
 debug = true
