--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ sbi-rt = "0.0.3"
 log = "0.4"
 bitflags = "1.3"
 buddy_system_allocator = "0.11"
+bitmap-allocator = "0.1.0"
+spin = "0.9"
 
 [profile.release]
 debug = true
