--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sbi-rt = "0.0.3"
+sbi-rt = { version = "0.0.3", features = ["legacy"]}
 log = "0.4"
 bitflags = "1.3"
 buddy_system_allocator = "0.11"
 bitmap-allocator = "0.1.0"
 spin = "0.9"
+riscv = "0.12.1"
 
 [profile.release]
 debug = true
