--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ buddy_system_allocator = "0.11"
 bitmap-allocator = "0.1.0"
 spin = "0.9"
 riscv = "0.12.1"
+serde = { version = "1.0", default-features = false, features = ["alloc"] }
+serde_derive = "1.0"
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 
 [profile.release]
 debug = true
