--- a/vm_configs.json
+++ b/vm_configs.json
@@ -1,14 +1,7 @@
 [
     {
         "id": 1,
-        "name": "VM1"
-    },
-    {
-        "id": 2,
-        "name": "VM2"
-    },
-    {
-        "id": 3,
-        "name": "VM3"
+        "name": "rCore-guest1",
+        "kernel": "rCore-Tutorial-v3"
     }
 ]
