--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 sbi-rt = { version = "0.0.3", features = ["legacy"]}
 log = "0.4"
 bitflags = "1.3"
+bit_field = "0.10"
 buddy_system_allocator = "0.11"
 bitmap-allocator = "0.1.0"
 spin = "0.9"
