--- a/vm_configs.json
+++ b/vm_configs.json
@@ -2,6 +2,8 @@
     {
         "id": 1,
         "name": "rCore-guest1",
-        "kernel": "rCore-Tutorial-v3"
+        "kernel": "rCore-Tutorial-v3",
+        "memory": 1024,
+        "num_vcpu": 1
     }
 ]
