guest image layout

--- a/vm_configs.json
+++ b/vm_configs.json
@@ -1,7 +1,7 @@
 [
     {
-        "name": "rCore-guest1",
-        "kernel": "rCore-Tutorial-v3",
+        "name": "hello-world-guest1",
+        "kernel": "hello-world",
         "memory_limit": 1024,
         "num_vcpu": 1
     }
