--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 sbi-rt = { version = "0.0.3", features = ["legacy"]}
+sbi-spec = { version = "0.0.8", features = ["legacy"] }
 log = "0.4"
 bitflags = "1.3"
 bit_field = "0.10"
